add DOMPurify to satisfy mozilla's security concerns about XSS

--- a/src/popup.html
+++ b/src/popup.html
@@ -25,12 +25,12 @@
     </div>
 
     <div id="optionsRow" class="callout hide-unimportant">
-        <img src="/images/48x48.svg"><h2 style="display:inline;margin-left:.5rem;">FoxyProxy</h2>
+        <img src="/images/48x48.svg" style="margin-bottom:1rem"><h2 style="display:inline;margin-left:.5rem">FoxyProxy</h2>
         <ul id="fp-browserActionPopup" class="vertical menu">
-          <li id="patternsListItem"><a id="patterns" class="fp-orange"><span id="patternsSelected"></span>Use Enabled Proxies By Patterns and Priority</a></li>
+          <li id="patternsListItem"><a id="patterns" class="fp-orange" style="padding-left: 0 !important; margin-left: 0 !important; margin-bottom: .25rem"><span id="patternsSelected"></span>Use Enabled Proxies By Patterns and Priority</a></li>
           <span id="menuInsertPoint"></span>
           <!--<li> <a id="enable">&nbsp;Turn On All Proxies</a></li>-->
-          <li><a id="disabled" style="color: red"><span id="disabledSelected"></span>Turn Off FoxyProxy (Use Firefox Settings)</a></li>
+          <li><a id="disabled" style="color: red;padding-left: 0 !important; margin-left: 0 !important; padding-top: .5rem !important"><span id="disabledSelected"></span>Turn Off FoxyProxy (Use Firefox Settings)</a></li>
           <li><hr id="horizRule"/></li>
           <li><a id="log">Log</a></li>
           <li><a id="where">What's My IP?</a></link>
@@ -45,5 +45,6 @@
   <script src="scripts/storage.js"></script>
   <script src="scripts/utils.js"></script>
   <script src="scripts/popup.js"></script>
+	<script src="scripts/purify.min.js"></script>
   </body>
 </html>
