--- a/src/proxies.html
+++ b/src/proxies.html
@@ -147,6 +147,7 @@
   <script src="scripts/utils.js"></script>
   <script src="scripts/vex.combined.js"></script>
   <script src="scripts/proxies.js"></script>
+	<script src="scripts/purify.min.js"></script>
   <canvas id="flag-icon-canvas-32" width="32" height="32" class="hide"></canvas>
   <canvas id="flag-icon-canvas-16" width="16" height="16" class="hide"></canvas>
   </body>
